@@ -27,6 +27,7 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* support IPv6 traffic class (via the TOS setting)
 	* made uTP re-enter slow-start after time-out
 	* fixed uTP upload performance issue
 	* fix missing support for DHT put salt
